# audacious-plugins

./: .gitignore  CMakeLists.txt  NOTES_DOMEN.txt  acinclude.m4  configure.ac
helper_clion_home_dir/: .gdbinit
helper_clion_home_dir/.dbus-keyrings/: org_gtk_gdbus_general
src/gtkui/: ui_gtk.cc
src/hotkey/: Makefile  api_hotkey.h  grab.cc  gui.cc  hotkey_api_common.cc  plugin.cc  plugin.h  x_hotkey.cc
src/hotkeyw32/: Makefile  gui.cc  logz  plugin.cc  plugin.h  thumb_buttons.cc  w32_common_headers.h  w32_common_headers.hpp  w32_grab.cc  w32_hotkey.cc  w32_resources_icons.cc  w32_resources_icons.hpp  windows_window.cc  windows_window.h
src/hotkeyw32/res/: WebstailSystemTray.rc2  resource.h  thumb_icons_map.rc
src/qthotkey/: Makefile  gui.cc  gui.h  plugin.cc  plugin.h  qhotkey.moc.cc  qhotkey_p.moc.cc
src/qthotkey/third_party_lib/: magic_enum.hpp
src/sid/: xmms-sid.cc
src/winkey/: Makefile  plugin.cc  plugin.h
